# design-docs-by-gemini

./: LICENSE  README.md  pyproject.toml
src/design_doc_agent/: __init__.py
